//
//  AccessibilityIdentifiers.swift
//  AzureSkys
//
//  Created by Suguru Tokuda on 10/5/26.
//

enum AccessibilityIdentifiers {
    static let dismissButton = "dismissButton"
    static let locationsButton = "locationsButton"
}
