//
//  PreviewManager+Strings.swift
//  AzureSkys
//
//  Created by Suguru Tokuda on 10/5/26.
//

extension PreviewManager {
    enum Strings {
        static let atlanta = "Atlanta"
        static let previewCountryCode = "US"
        static let georgia = "Georgia"
        static let americaNewYork = "America/New_York"
        static let clear = "Clear"
        static let clearSky = "clear sky"
        static let clearDayIcon = "01d"
        static let previewDailySummary = "Expect a day of partly cloudy with clear spells"
        static let previewForecastDate1 = "2023-11-27 21:00:00"
        static let previewForecastDate2 = "2023-11-28 21:00:00"
        static let previewForecastDate3 = "2023-11-29 21:00:00"
        static let previewForecastDate4 = "2023-11-230 21:00:00"
        static let cupertino = "Cupertino"
        static let chicagoILUSA = "Chicago IL, USA"
        static let previewPlaceID = "ChIJ7cv00DwsDogRAMDACa2m4K8"
        static let chicago = "Chicago"
        static let previewRegion = "IL, USA"
        static let previewFormattedAddress = "Chicago, IL, USA"
        static let locality = "locality"
        static let political = "political"
        static let cookCounty = "Cook County"
        static let dministrativeAreaLevel2 = "dministrative_area_level_2"
        static let illinois = "Illinois"
        static let previewStateCode = "IL"
        static let dministrativeAreaLevel1 = "dministrative_area_level_1"
        static let unitedState = "United State"
        static let country = "country"
        static let previewHotTemperature = "94°"
        static let houston = "Houston"
        static let previewVeryHotTemperature = "105°"
        static let previewFeelsLikeTemperature = "44°"
        static let previewTemperature = "40°"
    }
}
